--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --watch app server.js",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,6 +14,8 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.4",
+    "peer": "^0.5.3",
+    "socket.io": "^2.3.0",
     "uuid": "^8.3.0"
   }
 }
